<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    style="?backgroundTheme">
    
        <CheckBox
        android:id="@+id/chkBinnenland"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkbinnenland" />
        
        <CheckBox
        android:id="@+id/chkBuitenland"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkBinnenland"
        android:text="@string/chkbuitenland" />
        
        <CheckBox
        android:id="@+id/chkCultuur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkBuitenland"
        android:text="@string/chkcultuur" />
        
        <CheckBox
        android:id="@+id/chkEconomie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkCultuur"
        android:text="@string/chkeconomie" />
       	
       	<CheckBox
        android:id="@+id/chkLife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkEconomie"
        android:text="@string/chklife" />
</RelativeLayout>